--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Onglets</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="tab">
+    <button id="tablinks">Home</button>
+    <button id="tablinks">Contact</button>
+    <button id="tablinks">Réservation</button>
+    <button id="tablinks">Boutique</button>
+    </div>
+
+    <div class="tabcontent" id="Home">
+        <h3>Home</h3>
+        <p>Bienvenue chez moi</p>
+        <div class="picture">
+            <img src="/media/home.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="tabcontent" id="Contact">
+        <h3>Contact</h3>
+        <p>Bienvenue aux contacts</p>
+        <div class="picture">
+            <img src="/media/contact.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="tabcontent" id="Réservation">
+        <h3>Réservation</h3>
+        <p>Bienvenue au réservation</p>
+        <div class="picture">
+            <img src="/media/reservation.jpg" alt="">
+        </div>
+
+        <div class="tabcontent" id="Boutique">
+            <h3>Boutique</h3>
+            <p>Bienvenue en boutique</p>
+            <div class="picture">
+                <img src="/media/boutique.jpg" alt="">
+            </div>
+
+
     
 </body>
 </html>
